# nanOs

./: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_INDEX.md  EMBEDDED.md  GETTING_STARTED.md  Makefile  README.es.md  README.md  README_v0.4.md  grub.cfg  linker.ld  nanos-arm.elf  nanos-x86.elf  swarm-arm.sh
.claude/: settings.local.json
arch/arm-qemu/: linker.ld  maze_arm.c  modules.h  nanos_arm.c  startup.c  terrain_arm.c
arch/arm64/: boot.S  hal_arm64.c  linker.ld
arch/esp32/: CMakeLists.txt  hal_esp32.c
arch/x86/: console_vga.c  hal_x86.c  serial_com.c
boot/: boot.asm
dashboard/: nanos_dashboard.py  requirements.txt
docs/: MIGRATION_v0.4.md  PROTOCOL_EPHEMERAL_RELIABLE_TRANSPORT.md  RFC-NERT-001.txt  SECURITY_FIX_FORWARD_SECRECY.md  THREAT_MODEL.md
docs/latex/: experimento_seguridad.aux  experimento_seguridad.tex  paper_nanos_nert.aux  paper_nanos_nert.blg  paper_nanos_nert.out  paper_nanos_nert.tex
docs/manual/: Makefile  NanOS_Technical_Manual.aux  NanOS_Technical_Manual.lof  NanOS_Technical_Manual.lot  NanOS_Technical_Manual.out  NanOS_Technical_Manual.tex  README.txt  (+1 more)
drivers/: e1000_minimal.c  virtio_net.c
include/: e1000.h  hal.h  hal_esp32.h  hal_portable.h  io.h  nanos.h  nanos_config.h  nert.h  stdbool.h  string.h
kernel/: ais.c  blackbox.c  collective.c  genetic_receiver.c  hwval.c  judas.c  kernel.c  kernel_portable.c  nanos_embedded.c  polymorph.c  task_handler.c
platformio/: README.md  platformio.ini
tools/: attacker.py  run_security_test.sh  run_swarm.sh  swarm_observer.py  swarm_simulator.py
(+65 files in other folders)
